<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:textSize="20sp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option_1"
            android:tag="@string/text_option_1"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btn_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option_2"
            android:tag="@string/text_option_2"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btn_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option_3"
            android:tag="@string/text_option_3"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btn_option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option_4"
            android:tag="@string/text_option_4"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btn_option_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_option_5"
            android:tag="@string/text_option_5"
            android:layout_margin="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>